Update input type from text to number

--- a/compute.html
+++ b/compute.html
@@ -23,11 +23,8 @@
     </div>
     <br>
     <div id="div-result" style="visibility: hidden;">
+        <h2 id="summary-header">Bill Summary</h2>
         <table id="summary-table">
-            <tr>
-                <th></th>
-                <th>Bill Summary</th>
-            </tr>
         </table>
         <button type="button" id="edit-button">Edit</button>
     </div>
