--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <tr>
                     <td>
                         <label>Total Bill</label>
-                        <input type="number" id="total-bill" placeholder="Enter total bill" onkeypress="restrictToNumbers(event)" required>
+                        <input type="number" id="total-bill" placeholder="Enter total bill" onkeypress="restrictToNumbers(event)" required step="any">
                     </td>
                 </tr>
                 <tr>
